fix links section header bg (block out list numbers poking around sides, increase text visiblity)

--- a/src/components/Link/Link.css
+++ b/src/components/Link/Link.css
@@ -4,7 +4,7 @@
 }
 
 astro-island:first-of-type li.link {
-	margin-top: 0;
+	margin-top: 0.5rem;
 }
 
 .link.single {
